Add Swagger for API documentation

--- a/package.yaml
+++ b/package.yaml
@@ -69,12 +69,16 @@ description:         Please see the README on GitHub at <https://github.com/Olof
 dependencies:
   - aeson
   - base >= 4.7 && < 5
+  - lens
   - monad-logger
   - persistent
   - persistent-sqlite
   - persistent-template
   - rio
   - servant-server
+  - servant-swagger
+  - servant-swagger-ui
+  - swagger2
   - warp
 
 library:
